correct img path

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <button class="sign-up-but">sign up</button>
             </div>
             <div class="image-right">
-                <img src="../photos/vonnegut-1-main-copy.jpg" alt="Vonnegut portrait">
+                <img src="photos/vonnegut-1-main-copy.jpg" alt="Vonnegut portrait">
             </div>
         </div>
     </div>
@@ -40,25 +40,25 @@
         <div class="four-boxes">
             <div class="one-box">
                 <div class="blue-box">
-                    <img src="../photos/drawing-2.jpg" alt="">
+                    <img src="photos/drawing-2.jpg" alt="">
                 </div>
                 <div>Satirical Works</div>
             </div>
             <div class="one-box">
                 <div class="blue-box">
-                    <img src="../photos/vonnegut-3.jpg" alt="">
+                    <img src="photos/vonnegut-3.jpg" alt="">
                 </div>
                 <div>Interviews</div>
             </div>
             <div class="one-box">
                 <div class="blue-box">
-                    <img src="../photos/von-4.jpg" alt="">
+                    <img src="photos/von-4.jpg" alt="">
                 </div>
                 <div>Biography</div>
             </div>
             <div class="one-box bigger-box">
                 <div class="blue-box">
-                    <img src="../photos/von-5.jpg" alt="">
+                    <img src="photos/von-5.jpg" alt="">
                 </div>
                 <div>books by him were found in bin Laden's bunker</div>
             </div>
